# braindump

./: .gitignore  CLAUDE.md  README.md  install.sh  poe_tasks.toml  pyproject.toml
.github/: dependabot.yml
braindump/cli/: main.py
braindump/core/: __init__.py  config.py  entries.py  journal.py  projects.py  query.py  schema.py  store.py  tags.py
braindump/web/: app.py
braindump/web/static/: live-refresh.js  style.css
braindump/web/templates/: base.html  capture.html  dashboard.html  entries.html  entry_edit.html  entry_view.html  journal_day.html  project_detail.html  projects.html  tags.html
claude/commands/: bd-done.md  bd-dump.md  bd-list.md  bd-prompt.md  bd-search.md  bd-tags.md  bd-thought.md  bd-til.md  bd-todo.md
claude/skills/bd-digest/: SKILL.md
claude/skills/bd-done/: SKILL.md
claude/skills/bd-dump/: SKILL.md
claude/skills/bd-list/: SKILL.md
claude/skills/bd-project/: SKILL.md
claude/skills/bd-prompt/: SKILL.md
claude/skills/bd-search/: SKILL.md
claude/skills/bd-tags/: SKILL.md
claude/skills/bd-thought/: SKILL.md
claude/skills/bd-til/: SKILL.md
claude/skills/bd-todo/: SKILL.md
claude/skills/braindump/: SKILL.md
data-template/scripts/: create-entry.sh  done.sh  forgotten-sessions.sh  list.sh  search.sh  session-end.sh  session-start.sh  slugify.sh  tags.sh
meta/: original-prompt.md
tests/: conftest.py  test_cli.py  test_entries.py  test_journal.py  test_projects.py  test_query.py  test_store.py  test_web_live_refresh.py
