[project]
name = "braindump"
version = "0.2.0"
description = "Portable Claude-integrated personal knowledge management with CLI and local web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matous Mojzis" }]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.26.7",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.32",
    "watchfiles>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov",
    "freezegun>=1.4",
    "httpx>=0.28.1",
    "ruff",
    "ty",
    "vulture",
    "deptry",
    "poethepoet>=0.46.0",
]

[project.scripts]
bd = "braindump.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["braindump"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "DTZ", "T20", "PTH", "ERA", "PL", "TRY", "RUF", "S", "PERF", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLR0913", "S"]

[tool.ruff.format]

[tool.ty]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=braindump --cov-report=term-missing"

[tool.coverage.run]
source = ["braindump"]

[tool.coverage.report]
show_missing = true

[tool.vulture]
paths = ["braindump"]
min_confidence = 80

[tool.deptry]
per_rule_ignores = {"DEP003" = ["braindump"]}

[tool.poe]
verbosity = -1
include = "poe_tasks.toml"
